ctm-sf-homeloan-app/main/default/objects/LoanApplicantAsset__c/LoanApplicantAsset__c.object-meta.xml
<CustomObject>
    <label>Loan Applicant Asset</label>
    <nameField>
        <label>Loan Applicant Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Applicant Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>