ctm-sf-homeloan-app/main/default/objects/LoanApplicantAsset__c/fields/LoanApplicationAsset__c.field-meta.xml
<CustomField>
    <fullName>LoanApplicationAsset__c</fullName>
    <label>Loan Application Asset</label>
    <referenceTo>LoanApplicationAsset__c</referenceTo>
    <relationshipLabel>Loan Applicant Assets</relationshipLabel>
    <relationshipName>Loan_Applicant_Assets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>