ctm-sf-homeloan-app/main/default/objects/LoanApplicantAsset__c/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <description>Lookup to Loan Application Asset Reference Id</description>
    <formula>LoanApplicationAsset__r.ReferenceId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReferenceId</label>
    <type>Text</type>
</CustomField>