ctm-sf-homeloan-app/main/default/objects/LoanApplicantAsset__c/fields/ResidentialLoanApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ResidentialLoanApplicationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residential Loan Application</label>
    <referenceTo>ResidentialLoanApplication__c</referenceTo>
    <relationshipLabel>Loan Applicant Assets</relationshipLabel>
    <relationshipName>Loan_Applicant_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>